2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: String and password option settings got inserted into
	  the command line or the PostScript code with the "Custom."
	  prefix (thanks to Bin Li from Ricoh for reporting this). Fixed
	  also a segmentation fault due to missing initialization of
	  components of the param_t data structure by the
	  option_add_custom_param_from_string() function. Removed also
	  some unneeded free() calls.

2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>

	* acinclude.m4: Eliminated warnings when generating ./configure

2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE: Version 4.0.0.

	* STANDARD_installation: Tell also that "sudo make install" works
	  to run "make install" as root.

	* Makefile.am: Fixed cleaning rules. Many transient files did not
	  get removed.
	  Fixed "make inplace" and uninstalling rules.

2009-01-03  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Do the workaround for PostScript input of
	  OpenOffice 1.1.x also for StarOffice 8 (Thanks to Martin Jacobs,
	  martin dot jacobs at arcor dot de, for the patch).

2008-12-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c, foomaticrip.h, options.c: The PostScript code of
	  PostScript options did not get inserted when the spooler is CUPS
	  and foomatic-rip had to convert incoming PDF to PostScript
	  (Ubuntu bug #299918).

2008-12-05  Till Kamppeter <till.kamppeter@gmail.com>

	* README: Updated for Foomatic 4.x

	* test/*: Added test suite based on the LSB tests for foomatic-rip

	* README, USAGE, foomatic-rip.1.in, foomaticrip.c, options.c, pdf.c.
	  spooler.c: s/GhostScript/Ghostscript/

2008-11-30  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Insert the "%%PageSetup" section directly after
	  the DSC comment header of the page, all page drawing commands
	  must be after the section.

	* postscript.c: Inserted PostScript option settings from pstops